Adição de obrigação para executar como administrador.

--- a/Holbor.MySelfSSL/Holbor.MySelfSSL/Holbor.MySelfSSL.csproj
+++ b/Holbor.MySelfSSL/Holbor.MySelfSSL/Holbor.MySelfSSL.csproj
@@ -26,10 +26,10 @@
     <UpdateUrl>https://www.holbor.com/programs/MySelfSSL/</UpdateUrl>
     <TargetCulture>en-US</TargetCulture>
     <ProductName>MySelfSSL</ProductName>
-    <PublisherName>Darnley Costa</PublisherName>
+    <PublisherName>Holbor</PublisherName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>7</ApplicationRevision>
+    <ApplicationRevision>8</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
