--- a/Holbor.MySelfSSL/Holbor.MySelfSSL.Core/Holbor.MySelfSSL.Core.csproj
+++ b/Holbor.MySelfSSL/Holbor.MySelfSSL.Core/Holbor.MySelfSSL.Core.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{27758517-6CCF-46A0-9F3C-C9AC7A7DEE1B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>Holbor.MySelfSSL.Core</RootNamespace>
-    <AssemblyName>Holbor.MySelfSSL.Core</AssemblyName>
+    <AssemblyName>MySelfSSL</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
