--- a/Holbor.MySelfSSL/Holbor.MySelfSSL.Front/Holbor.MySelfSSL.Front.csproj
+++ b/Holbor.MySelfSSL/Holbor.MySelfSSL.Front/Holbor.MySelfSSL.Front.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Holbor.MySelfSSL.Front</RootNamespace>
-    <AssemblyName>Holbor.MySelfSSL.Front</AssemblyName>
+    <AssemblyName>MySelfSSL Front-end</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
