--- a/Holbor.MySelfSSL/Holbor.MySelfSSL.Infrastructure/Holbor.MySelfSSL.Infrastructure.csproj
+++ b/Holbor.MySelfSSL/Holbor.MySelfSSL.Infrastructure/Holbor.MySelfSSL.Infrastructure.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Holbor.MySelfSSL.Infrastructure</RootNamespace>
-    <AssemblyName>Holbor.MySelfSSL.Infrastructure</AssemblyName>
+    <AssemblyName>MySelfSSL Infrastructure</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
