--- a/Holbor.MySelfSSL/Holbor.MySelfSSL.Core/Holbor.MySelfSSL.Core.csproj
+++ b/Holbor.MySelfSSL/Holbor.MySelfSSL.Core/Holbor.MySelfSSL.Core.csproj
@@ -16,7 +16,7 @@
     <Install>true</Install>
     <InstallFrom>Web</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
+    <UpdateMode>Background</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
